--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Hunter Durbin. I am a studying computer science at Ball State University.</p>
+          <p>My name is Hunter Durbin. I am a studying computer science at Ball State University. I became interested in
+            this field during my senior year of high school, and I became invested in the endless possibilities of
+            creativity that this field offers.</p>
         </div>
 
         <div class="row">
@@ -112,22 +114,22 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Major:</strong> <span>Bachelor of Computer
                       Science</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Minor:</strong> <span>Mathematics</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>GPA:</strong> <span>3.93</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Expected Graduation:</strong> <span>May 2022</span>
+                  </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
                     <span>hunterdurbin000@gmail.com</span>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
                   </li>
                 </ul>
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et
-              ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
-              Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              <!--Under bullet point section-->
             </p>
           </div>
         </div>
@@ -143,12 +145,12 @@
 
         <div class="section-title">
           <h2>Interests</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>My favorite thing to do in my spare time is to play board games, specifically riichi mahjong and pandemic.
+
+          </p>
         </div>
 
-        <div class="row no-gutters">
+        <!-- <div class="row no-gutters">
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
@@ -186,7 +188,7 @@
             </div>
           </div>
 
-        </div>
+        </div> -->
 
       </div>
     </section><!-- End Facts Section -->
