Remove not needed images, Clean up index.html

--- a/index.html
+++ b/index.html
@@ -64,8 +64,13 @@
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="#interests" class="nav-link scrollto"><i class="bx bx-run"></i> <span>Interests</span></a>
+          </li>
+          <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-code-alt"></i> <span>Skills</span></a>
+          </li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Projects</span></a></li>
+          <li><a href="#projects" class="nav-link scrollto"><i class="bx bx-library"></i> <span>Projects</span></a>
+          </li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -138,12 +143,16 @@
 
 
     <!-- ======= Interest Section ======= -->
-    <section id="facts" class="facts">
+    <section id="interests" class="facts">
       <div class="container">
 
         <div class="section-title">
           <h2>Interests</h2>
-          <p>My favorite thing to do in my spare time is to play board games, specifically riichi mahjong and pandemic.
+          <p>My favorite thing to do in my spare time is to play board games, specifically riichi mahjong and
+            pandemic. Strategic cooperative board games tend to be my favorite due to having multiple people trying to
+            come up with optimal solutions to similar situation.<br>
+            I also love going to the gym, running and walking to help take my mind off things and keep me focused on the
+            rest of my day.<br>
 
           </p>
         </div>
@@ -199,7 +208,8 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Here are a few languages/environments that I am familiar and fairly comfortable with. A few others</p>
+          <p>Here are a few languages/environments that I am familiar and fairly comfortable with. These listed ones are
+            some that I feel most comfortable in, but I always enjoy learning new environments!</p>
         </div>
 
         <div class="row skills-content">
@@ -262,6 +272,10 @@
 
         </div>
 
+        <p>
+          Some others include: ruby, LUA, C#, mongodb
+        </p>
+
       </div>
     </section><!-- End Skills Section -->
 
@@ -273,9 +287,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p></p>
         </div>
 
         <div class="row">
@@ -283,9 +295,11 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Hunter Durbin</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and
-                  developing user-centered digital/print marketing material from initial concept to final, polished
-                  deliverable.</em></p>
+              <p><em>Diligent and hard-working to complete tasks. Takes purposeful and deliberate approaches to
+                  problems. Carefully think actions through for more confidence, stability and safety. Analyzes
+                  situations in a serious matter to weigh pros and cons.
+
+                </em></p>
               <ul>
                 <li>(317) 989-4711</li>
                 <li>hunterdurbin000@gmail.com</li>
@@ -350,7 +364,7 @@
 
 
     <!-- ======= Projects Section ======= -->
-    <section id="services" class="services">
+    <section id="projects" class="services">
       <div class="container">
 
         <div class="section-title">
