Finish main portions of cv

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="section-title">
           <h2>About</h2>
           <p>My name is Hunter Durbin. I am a studying computer science at Ball State University. I became interested in
-            this field during my senior year of high school, and I became invested in the endless possibilities of
+            this field during my junior year of high school, and I became invested in the endless possibilities of
             creativity that this field offers.</p>
         </div>
 
@@ -107,7 +107,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Computer Science Student</h3>
+            <h3>Computer Science Undergraduate</h3>
             <p class="fst-italic">
               Currently studying computer science at Ball State University.
             </p>
@@ -117,7 +117,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Major:</strong> <span>Bachelor of Computer
                       Science</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Minor:</strong> <span>Mathematics</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>GPA:</strong> <span>3.93</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>GPA:</strong> <span>3.94</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -273,7 +273,10 @@
         </div>
 
         <p>
-          Some others include: ruby, LUA, C#, mongodb
+          Some others include: ruby, LUA, C#, mongodb<br>
+          Other technical skills: Object-Oriented, Programming, Test-Driven, Relational Databases, Command
+          Terminal, API
+          Application, Development, Clean Code, Object Calisthenics
         </p>
 
       </div>
@@ -308,11 +311,15 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>BACHELOR OF COMPUTER SCIENCE</h4>
+              <h4>BACHELOR OF COMPUTER SCIENCE AND MINOR IN MATHEMATICS</h4>
               <h5>2019-present</h5>
               <p><em>Ball State University, Muncie, IN</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui
-                ut dignissimos deleniti nerada porti sand markend</p>
+              <p>
+                Currently 3.94 GPA and on Dean's List all 4 semesters attended so far. Received Presidential
+                Scholarhip.<br>
+                Completed courses including database design, computer networks, design and analysis of algorithms,
+                computer orginization and architecture, and theory of computation.
+              </p>
             </div>
             <div class="resume-item">
               <h4>HIGH SCHOOL DIPLOMA WITH ACADEMIC HONORS</h4>
@@ -330,8 +337,7 @@
               <p><em>Ball State, Muncie, IN</em></p>
               <ul>
                 <li>Review student work and distribute meaningful feedback on assignments.</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the
-                  project. </li>
+                <li>Create answer keys for students to compare their work to.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -339,11 +345,11 @@
               <h5>Jun 2021 - July 2021</h5>
               <p><em>Hartson-Kennedy Cabinet Top Co., Marion, IN</em></p>
               <ul>
-                <li>Fed wood through machines to specified length</li>
-                <li>Operated factory vehicles to gather wood and then store it</li>
-                <li>Worked extra hours and early hours to help meet orders</li>
+                <li>Fed wood through machines to specified length.</li>
+                <li>Operated factory vehicles to gather wood and then store it.</li>
+                <li>Worked extra hours and early hours to help meet orders.</li>
                 <li>Communicated with other workers to efficiently distribute order sheets to lines that were getting
-                  short on supplies</li>
+                  short on supplies.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -352,8 +358,8 @@
               <p><em>Ball State, Muncie, IN</em></p>
               <ul>
                 <li>Helped students prepare for exams throughout multiple sessions.
-                  Collaborated with students to help develop essential ideas over multiple topics</li>
-                <li>Developed student confidence for mathematics and computer science courses</li>
+                  Collaborated with students to help develop essential ideas over multiple topics.</li>
+                <li>Developed student confidence for mathematics and computer science courses.</li>
               </ul>
             </div>
           </div>
@@ -369,7 +375,7 @@
 
         <div class="section-title">
           <h2>Projects</h2>
-          <p>A list of the majority of projects that I completed at Ball State. A few personal projects are listed,
+          <p>A list of some notable projects that I completed at Ball State. A few personal projects are listed,
             which are explicited noted.</p>
         </div>
 
@@ -398,7 +404,7 @@
             <ul>
               <li>Language: <em>Java</em></li>
               <li>Allows for administrators to access and update student records for concerts they attended by having
-                the information input through the JavaFX application</li>
+                the information input through the JavaFX application.</li>
               <li>Stored information in Google Sheets and used batch updates to communicate with Google's servers to
                 send and retrieve data for records.</li>
             </ul>
@@ -414,7 +420,7 @@
               <li>Language: <em>Java</em></li>
               <li>Created a JavaFX application on desktop to allow users to request for any Wikipedia article's most
                 recent revisions, which included date modified and the user.</li>
-              <li>Designed request JSON link to retrieve data from Wikipedia's API</li>
+              <li>Designed request JSON link to retrieve data from Wikipedia's API.</li>
             </ul>
             </p>
           </div>
@@ -426,9 +432,9 @@
               <strong>Date:</strong> November 2020 - December 2020
             <ul>
               <li>Language: <em>Python</em></li>
-              <li>Implemented a binary search tree data structure from scratch that organizes ship objects in python
+              <li>Implemented a binary search tree data structure from scratch that organizes ship objects in python.
               </li>
-              <li>Used test-driven development to implement and test code
+              <li>Used test-driven development to implement and test code.
               </li>
               <li>Documented module with ReST documentation and used Sphinx to render html documentation for the
                 completed project.
@@ -444,7 +450,7 @@
               <strong>Date:</strong> Summer 2020
             <ul>
               <li>Language: <em>Python</em></li>
-              <li>Implemented Discord's API in python
+              <li>Implemented Discord's API in python.
               </li>
               <li>Made a small bot that greeted new visitors and played music through voice channels when people joined
                 a certain call.
@@ -461,9 +467,9 @@
             <ul>
               <li>Language: <em>Java</em></li>
               <li>Made a score calculator for the riichi mahjong that calculates a player's winning hand given the fu
-                and minipoints of the hand</li>
+                and minipoints of the hand.</li>
               <li>Used JavaFX application for entering information such as seat wind, winning tile condition, fu and
-                minipoints</li>
+                minipoints.</li>
             </ul>
             </p>
           </div>
@@ -594,17 +600,21 @@
                 <p>A108 Adam Street, New York, NY 535022</p>
               </div> -->
 
-              <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>hunterdurbin000@gmail.com</p>
-              </div>
+              <a href="mailto:hunterdurbin000@gmail.com" target="_blank">
+                <div class="email">
+                  <i class="bi bi-envelope"></i>
+                  <h4>Email:</h4>
+                  <p>hunterdurbin000@gmail.com</p>
+                </div>
+              </a>
 
-              <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+1 317 989 4711</p>
-              </div>
+              <a href="tel:+13179894711">
+                <div class="phone">
+                  <i class="bi bi-phone"></i>
+                  <h4>Call:</h4>
+                  <p>+1 317 989 4711</p>
+                </div>
+              </a>
 
               <!-- <iframe src="" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
             </div>
