--- a/index.html
+++ b/index.html
@@ -64,10 +64,8 @@
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#interests" class="nav-link scrollto"><i class="bx bx-run"></i> <span>Interests</span></a>
-          </li>
-          <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-code-alt"></i> <span>Skills</span></a>
-          </li>
+          <li><a href="#interests" class="nav-link scrollto"><i class="bx bx-run"></i> <span>Interests</span></a></li>
+          <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-code-alt"></i> <span>Skills</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#projects" class="nav-link scrollto"><i class="bx bx-library"></i> <span>Projects</span></a>
           </li>
