--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Hunter Durbin. I am a studying computer science at Ball State University. I became interested in
+          <p>My name is Hunter Durbin. I am studying computer science at Ball State University. I became interested in
             this field during my junior year of high school, and I became invested in the endless possibilities of
             creativity that this field offers.</p>
         </div>
@@ -147,8 +147,8 @@
         <div class="section-title">
           <h2>Interests</h2>
           <p>My favorite thing to do in my spare time is to play board games, specifically riichi mahjong and
-            pandemic. Strategic cooperative board games tend to be my favorite due to having multiple people trying to
-            come up with optimal solutions to similar situation.<br>
+            Pandemic. Strategic cooperative board games tend to be my favorite due to having multiple people trying to
+            come up with optimal solutions to a similar situation.<br>
             I also love going to the gym, running and walking to help take my mind off things and keep me focused on the
             rest of my day.<br>
 
