--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Major:</strong> <span>Bachelor of Computer
                       Science</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Minor:</strong> <span>Mathematics</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>GPA:</strong> <span>3.94</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>GPA:</strong> <span>3.95</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -146,10 +146,13 @@
 
         <div class="section-title">
           <h2>Interests</h2>
-          <p>My favorite thing to do in my spare time is to play board games, specifically riichi mahjong and
+          <p>
+            
+            My favorite thing to do in my spare time is to play board games, specifically riichi mahjong and
             Pandemic. Strategic cooperative board games tend to be my favorite due to having multiple people trying to
-            come up with optimal solutions to a similar situation.<br>
-            I also love going to the gym, running and walking to help take my mind off things and keep me focused on the
+            come up with optimal solutions given varied situations.<br>
+
+            I also love going to the gym, running, and walking to help take my mind off things and keep me focused on the
             rest of my day.<br>
 
           </p>
@@ -206,8 +209,8 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Here are a few languages/environments that I am familiar and fairly comfortable with. These listed ones are
-            some that I feel most comfortable in, but I always enjoy learning new environments!</p>
+          <p>Most of the languages/environments/frameworks that I am familiar and fairly comfortable with. These listed ones are
+            some that I feel most comfortable in, but I am always eager to learn new ones!</p>
         </div>
 
         <div class="row skills-content">
@@ -215,7 +218,7 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">Python <i class="val">100%</i></span>
+              <span class="skill">NODEJS / javascript <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -243,6 +246,14 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
+              <span class="skill">Python <i class="val">100%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+            <div class="progress">
               <span class="skill">HTML <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
@@ -258,23 +269,17 @@
               </div>
             </div>
 
-            <div class="progress">
-              <span class="skill">JavaScript <i class="val">60%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
           </div>
 
         </div>
 
         <p>
-          Some others include: ruby, LUA, C#, mongodb<br>
-          Other technical skills: Object-Oriented, Programming, Test-Driven, Relational Databases, Command
-          Terminal, API
-          Application, Development, Clean Code, Object Calisthenics
+          Databases: MySQL, Mongodb<br>
+          Frontend Frameworks: Angular, Bootstrap, Vue3<br>
+          Languages: Javascript, Python, Java, PHP ruby, LUA, C#<br>
+          Containerizing: Docker<br>
+          Other technical skills: Object-Oriented, Component-Based, Programming, Test-Driven, Relational Databases, Command
+          Terminal, API, Application, Development, Clean Code, Object Calisthenics
         </p>
 
       </div>
@@ -310,12 +315,12 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>BACHELOR OF COMPUTER SCIENCE AND MINOR IN MATHEMATICS</h4>
-              <h5>2019-present</h5>
+              <h5>2019-present (May 2022 Graduate)</h5>
               <p><em>Ball State University, Muncie, IN</em></p>
               <p>
-                Currently 3.94 GPA and on Dean's List all 4 semesters attended so far. Received Presidential
+                Currently 3.95 GPA and on Dean's List all 5 semesters attended so far. Received Presidential
                 Scholarhip.<br>
-                Completed courses including database design, computer networks, design and analysis of algorithms,
+                Completed courses including software engineering, web programming, database design, computer networks, design and analysis of algorithms,
                 computer orginization and architecture, and theory of computation.
               </p>
             </div>
@@ -378,6 +383,44 @@
         </div>
 
         <div class="row">
+
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+            <!-- <div class="icon"><i class="bi bi-briefcase"></i></div> -->
+            <h4 class="title">Refreps Web Application</h4>
+            <p class="description">
+              <strong>Date:</strong> August 2021 - present
+            <ul>
+              <li>Frontend: <em>Angular</em></li>
+              <li>API: <em>Nodejs + Express</em></li>
+              <li>Database: <em>Mongodb</em></li>
+              <li>Container: <em>Docker</em></li>
+              <li>Class project for Software Engineering.</li>
+              <li>Designed a database to hold users, courses, quizzes, and other items found in a content management system.</li>
+              <li>Developed an nodejs express api to communicate with mongodb and the frontend.</li>
+              <li>Coordinated feature branching on GitHub to add new features without too much trouble.</li>
+              <li>Utilized test driven development to maintain project integrity when new features where added.</li>
+              <li>Containerized project using Docker to keep a consistent environment for dev team and production.</li>
+            </ul>
+            </p>
+          </div>
+
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+            <!-- <div class="icon"><i class="bi bi-briefcase"></i></div> -->
+            <h4 class="title">Wallpaper Webstore Web Application</h4>
+            <p class="description">
+              <strong>Date:</strong> Janurary 2022 - present
+            <ul>
+              <li>Frontend: <em>Bootstrap</em></li>
+              <li>Server Logic: <em>PHP</em></li>
+              <li>Database: <em>MySQL</em></li>
+              <li>Class project for multiteir web development.</li>
+              <li>Designed a small e-commerce website to browse and shop for desktop wallpapers.</li>
+              <li>Utilized PHP to create the server logic to bridge the frontend user input with the database when needed.</li>
+              <li>Provided bootstrap framework to create a responsive application.</li>
+            </ul>
+            </p>
+          </div>
+
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <!-- <div class="icon"><i class="bi bi-briefcase"></i></div> -->
             <h4 class="title">Sea Traffic Database</h4>
@@ -434,7 +477,7 @@
               </li>
               <li>Used test-driven development to implement and test code.
               </li>
-              <li>Documented module with ReST documentation and used Sphinx to render html documentation for the
+              <li>Documented module using Sphinx to render html documentation for the
                 completed project.
               </li>
             </ul>
