--- a/index.html
+++ b/index.html
@@ -657,6 +657,22 @@
                 </div>
               </a>
 
+              <a href="https://www.linkedin.com/in/huntermdurbin/" target="_blank">
+                <div class="">
+                  <i class="bi bi-linkedin"></i>
+                  <h4>LinkedIn:</h4>
+                  <p><a href="https://www.linkedin.com/in/huntermdurbin/" target="_blank">https://www.linkedin.com/in/huntermdurbin</a></p>
+                </div>
+              </a>
+
+              <a href="https://github.com/hunterdurbin" target="_blank">
+                <div class="">
+                  <i class="bi bi-github"></i>
+                  <h4>GitHub:</h4>
+                  <p><a href="https://github.com/hunterdurbin" target="_blank">https://github.com/hunterdurbin</a></p>
+                </div>
+              </a>
+
               <!-- <iframe src="" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
             </div>
 
