--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
           Frontend Frameworks: Angular, Bootstrap, Vue3<br>
           Languages: Javascript, Python, Java, PHP ruby, LUA, C#<br>
           Containerizing: Docker<br>
+          Version Control: GitHub<br>
           Other technical skills: Object-Oriented, Component-Based, Programming, Test-Driven, Relational Databases, Command
           Terminal, API, Application, Development, Clean Code, Object Calisthenics
         </p>
